manifests/rabbitMQ/rabbit-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: rabbitmq
  labels:
    app: rabbitmq
spec:
  selector:
    matchLabels:
      app: rabbitmq
  serviceName: "not-applicable"
  template:
    metadata: 
      labels:
        app: rabbitmq
    spec:
      containers:
        - name: rabbitmq
          image: rabbitmq:3-management
          ports:
          - containerPort: 15672
            protocol: TCP
            name: http
          - containerPort: 5672
            protocol: TCP
            name: amqp
          volumeMounts:
          - name: rabbitmq-volume
            mountPath: /var/lib/rabbitmq
      volumes:
        - name:  rabbitmq-volume
          persistentVolumeClaim:
            claimName: rabbitmq-pvc
